--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <li><a href="#skills" class="nav-link">Skills</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#" class="nav-link" id="resume-link">Resume</a></li>
+                    <li><a href="#" class="nav-link" id="certificate-link">Certificate</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
@@ -79,7 +80,7 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">Year - Year</span>
+                                <span class="timeline-date">2021 - 2025</span>
                                 <h4>B E Computer Science</h4>
                                 <p class="timeline-institution">Velammal Engineering College</p>
                                 <p class="timeline-location">Chennai</p>
@@ -88,7 +89,7 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">Year - Year</span>
+                                <span class="timeline-date">2020 - 2021</span>
                                 <h4>12 STD</h4>
                                 <p class="timeline-institution">Chinmaya Vidyalaiya Hr Sec School</p>
                                 <p class="timeline-location">Chennai</p>
@@ -97,7 +98,7 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">Year - Year</span>
+                                <span class="timeline-date">2018 - 2019</span>
                                 <h4>10 STD</h4>
                                 <p class="timeline-institution">A V Meiyappan Mat Hr Sec School</p>
                                 <p class="timeline-location">Chennai</p>
@@ -114,7 +115,7 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">Month, Year - Month, Year</span>
+                                <span class="timeline-date">December 2023</span>
                                 <h4>Full Stack Developer Internship</h4>
                                 <p class="timeline-company">One Yes Solutions</p>
                                 <ul class="timeline-description">
@@ -129,7 +130,7 @@
                         <div class="timeline-item">
                             <div class="timeline-marker"></div>
                             <div class="timeline-content">
-                                <span class="timeline-date">Month, Year - Month, Year</span>
+                                <span class="timeline-date">July 2024</span>
                                 <h4>Full Stack Development Internship</h4>
                                 <p class="timeline-company">Hyperlink Info Tech</p>
                                 <ul class="timeline-description">
@@ -385,6 +386,36 @@
                 <i class="fas fa-times"></i>
             </button>
             <img src="VENKATBALA RESUME 2.png" alt="VENKAT BALA R Resume" class="resume-image">
+        </div>
+    </div>
+
+    <!-- Certificate Modal -->
+    <div id="certificate-modal" class="resume-modal">
+        <div class="resume-modal-overlay"></div>
+        <div class="resume-modal-content certificate-content">
+            <button class="resume-modal-close certificate-close" aria-label="Close modal">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="certificates-gallery">
+                <div class="certificate-item">
+                    <img src="pdf (1).png" alt="OneYes Infotech Certificate" class="certificate-image">
+                </div>
+                <div class="certificate-item">
+                    <img src="GuviCertification.png.png" alt="GUVI Certification" class="certificate-image">
+                </div>
+                <div class="certificate-item">
+                    <img src="venkatbala22.png" alt="Certificate" class="certificate-image">
+                </div>
+                <div class="certificate-item">
+                    <a href="venkatcertificat1.pdf" target="_blank" rel="noopener noreferrer" class="certificate-pdf-link">
+                        <div class="certificate-pdf">
+                            <i class="fas fa-file-pdf"></i>
+                            <p>Hyperlynx Infotech Certificate</p>
+                            <span>Click to view PDF</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
